--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <packaging>jar</packaging>
 
   <name>{{ project }}</name>
+  <description></description>
   <url>{{ project_url }}</url>
 
   <properties>
@@ -23,6 +24,19 @@
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>{{ package }}.Main</mainClass>
+              <packageName>{{ package }}</packageName>
+            </manifest>
+          </archive>
         </configuration>
       </plugin>
     </plugins>
@@ -44,24 +58,19 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>net.avh4.util</groupId>
-      <artifactId>imagecomparison</artifactId>
+      <groupId>org.jbehave</groupId>
+      <artifactId>jbehave-core</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jbehave</groupId>
-      <artifactId>jbehave-core</artifactId>
+      <groupId>net.avh4.util</groupId>
+      <artifactId>imagecomparison</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.hamcrest</groupId>
-        <artifactId>hamcrest-integration</artifactId>
-        <version>1.2.1</version>
-      </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit-dep</artifactId>
@@ -73,16 +82,51 @@
         <version>1.8.5</version>
       </dependency>
       <dependency>
-        <groupId>net.avh4.util</groupId>
-        <artifactId>imagecomparison</artifactId>
-        <version>0.0.4-SNAPSHOT</version>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-core</artifactId>
+        <version>1.2.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-library</artifactId>
+        <version>1.2.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-integration</artifactId>
+        <version>1.2.1</version>
       </dependency>
       <dependency>
         <groupId>org.jbehave</groupId>
         <artifactId>jbehave-core</artifactId>
         <version>3.5</version>
       </dependency>
+      <dependency>
+        <groupId>net.avh4.util</groupId>
+        <artifactId>imagecomparison</artifactId>
+        <version>0.0.4-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+          <formats>
+            <format>html</format>
+            <format>xml</format>
+          </formats>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
