--- a/pom.xml
+++ b/pom.xml
@@ -3,21 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- this is only temporary until cucumber-jvm reached 1.0.0 release, after which the packages will be in maven central -->
-    <repositories>
-        <repository>
-            <id>sonatype-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
-
     <groupId>net.avh4.jrspec</groupId>
     <artifactId>jrspec</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>jrspec</name>
-    <description></description>
+    <description>JrSpec - Testing tool for Java</description>
     <url>https://github.com/avh4/jrspec</url>
 
     <properties>
@@ -81,7 +73,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit-dep</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
