--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
     <url>https://github.com/avh4/junit-nested</url>
     <licenses>
         <license>
-            <name>Common Public License Version 1.0</name>
-            <url>http://www.opensource.org/licenses/cpl1.0.txt</url>
+            <name>Eclipse Public License Version 1.0</name>
+            <url>http://opensource.org/licenses/EPL-1.0</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
